--- a/tackle-api/requirements.txt
+++ b/tackle-api/requirements.txt
@@ -7,4 +7,6 @@ itsdangerous==2.0.1
 Jinja2==3.0.3
 werkzeug==2.0.2
 swagger-ui-bundle>=0.0.2
-connexion==2.14.2
+flask-marshmallow==0.14.0
+marshmallow-sqlalchemy==0.24.1
+connexion[swagger-ui]
