--- a/tackle-api/requirements.txt
+++ b/tackle-api/requirements.txt
@@ -10,3 +10,5 @@ swagger-ui-bundle>=0.0.2
 flask-marshmallow==0.14.0
 marshmallow-sqlalchemy==0.24.1
 connexion[swagger-ui]
+pytest==7.3.1
+WebTest==3.0.0
