--- a/tackle-app/package.json
+++ b/tackle-app/package.json
@@ -9,6 +9,8 @@
     "@types/react-dom": "^18.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-query": "^3.39.3",
+    "react-query-devtools": "^2.6.3",
     "react-scripts": "^4.0.3",
     "typescript": "^4.6.3"
   },
