--- a/tackle-app/package.json
+++ b/tackle-app/package.json
@@ -7,6 +7,8 @@
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
+    "axios": "^1.4.0",
+    "path-to-regexp": "^6.2.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-query": "^3.39.3",
