--- a/tackle-app/package.json
+++ b/tackle-app/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
+    "@mui/material": "^5.12.2",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
     "axios": "^1.4.0",
     "path-to-regexp": "^6.2.1",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-query": "^3.39.3",
     "react-query-devtools": "^2.6.3",
     "react-scripts": "^4.0.3",
