--- a/tackle-app/package.json
+++ b/tackle-app/package.json
@@ -5,12 +5,16 @@
   "dependencies": {
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.2",
+    "@mui/styles": "^5.12.0",
+    "@mui/x-data-grid": "^6.3.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.25",
-    "@types/react": "^18.0.5",
+    "@types/react": "^18.2.0",
     "@types/react-dom": "^18.0.1",
     "axios": "^1.4.0",
+    "lodash": "^4.17.21",
     "path-to-regexp": "^6.2.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -33,5 +37,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/lodash": "^4.14.194"
+  }
 }
